# fti-emptying

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  docker-build-and-publish.yml
i18n/en-US/: fti_emptying.ftl
i18n/sv-SE/: fti_emptying.ftl
src/: fti.rs  humanize.rs  i18n.rs  main.rs  report.rs
