[package]
name = "fti-emptying"
version = "0.1.0"
authors = ["Jens Bäckman <jens.backman@me.com"]
edition = "2021"
description = "Shows when FTI has emptied recycling bins at a site"
repository = "https://git.kodgruvan.com/czw/fti-emptying"
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.2", features = ["derive"] }
minidom = "0.15"
notify-rust = { version = "4", optional = true }
ureq = { version = "2.6", default-features = false, features = ["tls"] }

# i18n
i18n-embed = { version = "0.13", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.6"
rust-embed = "6"

[features]
default = ["desktop-notifications"]
desktop-notifications = ["dep:notify-rust"]
